# awesome-icons

./:  index.svelte  CMakeLists.txt  Dockerfile  angular.json  index.asm  index.astro  index.bash  index.c  index.cfg  index.clj  index.cpp  index.css  index.csv  index.dart  index.db  index.ejs  index.go  index.gradle  index.h  index.hbs  index.hpp  index.ini  index.ipynb  index.jl  index.js  index.json  index.jsx  index.kt  index.less  index.lua  index.mm  index.mustache  index.php  index.pl  index.py  index.r  index.rb  index.rs  index.swift  readme.md
